--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "author": "Pugazharasan",
     "license": "MIT",
     "dependencies": {
+        "bcryptjs": "^2.4.3",
         "colors": "^1.4.0",
         "dotenv": "^16.0.3",
         "express": "^4.18.1",
         "express-async-errors": "^3.1.1",
         "http-status-codes": "^2.2.0",
+        "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.6.2"
     },
     "devDependencies": {
