--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "scripts": {
         "start": "node backend/server.js",
         "server": "nodemon backend/server.js",
-        "client": "npm start --prefix frontend"
+        "client": "npm start --prefix frontend",
+        "dev": "concurrently \"npm run server\" \"npm run client\""
     },
     "author": "Pugazharasan",
     "license": "MIT",
@@ -22,6 +23,7 @@
         "mongoose": "^6.6.2"
     },
     "devDependencies": {
+        "concurrently": "^7.4.0",
         "nodemon": "^2.0.20"
     }
 }
